--- a/video_max.html
+++ b/video_max.html
@@ -114,7 +114,7 @@
     </style>
 </head>
 <body>
-    <p>Это обычный текст на странице для тестирования масштабирования.</p>
+    <p>Церква ЄХБ "Дім Євангелія" м Суми.</p>
 
 <div class="content-section">
     <h2>
