--- a/video_max.html
+++ b/video_max.html
@@ -115,7 +115,7 @@
 </head>
 <body>
     <p>Церква ЄХБ "Дім Євангелія" м Суми.</p>
-
+<p>[Відео записи. Оновлено 15.04.24]</p>
 <div class="content-section">
     <h2>
         <img src="logo.jpg" alt="Аватар " class="video-avatar">
