--- a/video_max.html
+++ b/video_max.html
@@ -86,6 +86,7 @@ body {
 
     .video-link .video-title {
         font-size: 14px;
+        margin-top: 5px; /* Опускаем текст относительно слова [...]Видео */
     }
 
     .content-section img {
