--- a/video_max.html
+++ b/video_max.html
@@ -7,11 +7,11 @@
 
     <style>
 
-body {
-    font-family: Arial, sans-serif;
-    padding: 10px;
-    background-color: #f7f7f7;
-}
+        body {
+            font-family: Arial, sans-serif;
+            padding: 10px;
+            background-color: #f7f7f7;
+        }
 
 /* Стили для контейнеров */
 .content-section {
@@ -21,104 +21,102 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 30px;
     padding: 20px;
-    background-image: url('icon15.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    background-image: url('icon15.jpg'); /* Путь к вашему фоновому изображению */
+    background-size: cover; /* Масштабирование изображения */
+    background-repeat: no-repeat; /* Запрет повторения фонового изображения */
+    background-position: center; /* Центрирование фонового изображения */
 }
 
-.content-section h2 {
-    color: #333;
-    border-bottom: 2px solid #007bff;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-}
+        .content-section h2 {
+            color: #333;
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+        }
 
-.video-links {
-    list-style-type: disc;
-    padding-left: 10px;
-}
+        .video-links {
+            list-style-type: disc;
+            padding-left: 10px;
+        }
 
-.video-item {
-    margin: 0;
-}
+        .video-item {
+            margin: 0;
+        }
 
-.video-link {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: #333;
-    transition: background-color 0.3s;
-    padding: 1px 1px;
-    border-radius: 4px;
-    flex-wrap: wrap;
-}
+        .video-link {
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            color: #333;
+            transition: background-color 0.3s;
+            padding: 1px 1px;
+            border-radius: 4px;
+            flex-wrap: wrap;
+        }
 
-.video-link .video-index {
-    color: #007bff;
-    margin-right: 10px;
-}
+        .video-link .video-index {
+            color: #007bff;
+            margin-right: 10px;
+        }
 
-.video-link img {
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
-}
+        .video-link img {
+            width: 240px;
+            height: 240px;
+            margin-right: 10px;
+        }
 
-.video-player {
-    display: none;
-    border-radius: 8px;
-    overflow: hidden;
-}
+        .video-player {
+            display: none;
+            border-radius: 8px;
+            overflow: hidden;
+         }
 
-.video-title {
-    font-size: 16px;
-    color: black;
-}
+       
+        @media (max-width: 768px) {
+            .video-player {
+                position: relative;
+                padding-bottom: 56.25%;
+                height: 0;
+                width: 100%;
+            }
 
-@media (max-width: 768px) {
-    .video-player {
-        position: relative;
-        padding-bottom: 56.25%;
-        height: 0;
-        width: 100%;
-    }
+            .video-player iframe {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
 
-    .video-link .video-title {
-        font-size: 14px;
-    }
+            .video-link .video-title {
+                font-size: 14px;
+            }
 
-    .content-section img {
-        width: 20px;
-        height: 20px;
-    }
+            .content-section img {
+                width: 20px;
+                height: 20px;
+            }
 
-    .video-link img {
-        width: 20px;  /* Уменьшил ширину изображения для мобильных устройств */
-        height: 20px; /* Уменьшил высоту изображения для мобильных устройств */
+        }
 
-    }
-}
+        @media (min-width: 769px) {
+            .video-player {
+                width: 560px;
+                height: 315px;
+            }
 
+            .content-section img {
+                width: 20px;
+                height: 20px;
+            }
 
-@media (min-width: 769px) {
-    .video-player {
-        width: 560px;
-        height: 315px;
-    }
-
-    .content-section img {
-        width: 25px;
-        height: 25px;
-    }
-}
-
-
+        }
     </style>
 </head>
-<body>
-    <p>Церква "Дім Євангелія" м Суми.</p>
-    <p style="font-size: smaller; color: green;">[Відео записи. Оновлено 15.04.24]</p>
+<body>    
+        <p>Церква "Дім Євангелія" м Суми.</p>
+        <p style="font-size: smaller; color: green;">[Відео записи. Оновлено 15.04.24]</p>
+
 <div class="content-section">
     <h2>
         <img src="logo.jpg" alt="Аватар " class="video-avatar">
@@ -258,7 +256,7 @@ document.addEventListener("DOMContentLoaded", function() {
     });
 
     // Загрузка списка видео из файла
-    fetch('https://raw.githubusercontent.com/ruyriy/VideoYouTube/main/videos.txt')
+    fetch('https://dl.dropbox.com/scl/fi/kis5dundjlt45ydec8nyc/videos.txt?rlkey=rd06i69flwri42d91ddptpdli&dl=0')
         .then(response => response.text())
         .then(data => {
             const videos = data.split('\n').filter(Boolean);
