--- a/video_max.html
+++ b/video_max.html
@@ -261,7 +261,7 @@
 
             // Загрузка списка видео из файла
             loader.style.display = 'block';  // Показать индикатор загрузки
-            fetch('https://dl.dropbox.com/scl/fi/kis5dundjlt45ydec8nyc/videos.txt?rlkey=rd06i69flwri42d91ddptpdli&dl=0')
+            fetch('https://raw.githubusercontent.com/ruyriy/VideoYouTube/main/videos.txt')
                 .then(response => response.text())
                 .then(data => {
                     loader.style.display = 'none';  // Скрыть индикатор загрузки
