--- a/index.html
+++ b/index.html
@@ -59,11 +59,17 @@
             margin-right: 10px;
         }
 
-        .video-link img {
-            width: 240px;
-            height: 240px;
-            margin-right: 10px;
-        }
+        /* Стили для основного логотипа */
+.content-section .video-avatar {
+    width: 100px;  /* Установите желаемую ширину */
+    height: auto;  /* Автоматическое масштабирование высоты */
+}
+
+/* Стили для иконки YouTube */
+.video-link img {
+    width: 50px;   /* Установите желаемую ширину */
+    height: auto;  /* Автоматическое масштабирование высоты */
+}
 
         .video-player {
             display: none;
@@ -227,7 +233,7 @@
         <img src="logo.jpg" alt="Аватар " class="video-avatar">
         Прославлення, Молодіжна
     </h2>
-    <ul class="video-links" data-group="Молодіжне служіння|Дитяче служіння"></ul>
+    <ul class="video-links" data-group="Молодіжне служіння|Дитяче служіння|Охріменко|Олена Приходько"></ul>
 </div>
 
 <div class="content-section">
@@ -251,7 +257,7 @@
         <img src="logo.jpg" alt="Аватар " class="video-avatar">
         Інші відео
     </h2>
-    <ul class="video-links" data-group="Other|Unknown"></ul>
+    <ul class="video-links" data-group="остальное|Unknown"></ul>
 </div>
 
 
