--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <nav>
     <ul>
         <li><a href="#index">Головна</a></li>
-        <li><a href="#index_max">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
+        <li><a href="#index_max.html">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
         <li><a href="#">Другі відео</a></li>
     </ul>
 </nav>
