--- a/video_max.html
+++ b/video_max.html
@@ -121,7 +121,13 @@
 </head>
 <body>    
         <p>Церква "Дім Євангелія" м Суми.</p>
-        <p style="font-size: smaller; color: green;">[Відео записи. Оновлено 15.04.24]</p>
+<nav>
+    <ul>
+        <li><a href="index.html">Головна</a></li>
+        <li><a href="video_max.html">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
+        <li><a href="#">Другі відео</a></li>
+    </ul>
+</nav>
 
 
    <!-- Индикатор загрузки -->
