--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Playlist</title>
+    <link rel="icon" href="logo2.jpg">
     <style>
         .player {
             width: 560px; /* Ширина плеера для режима ПК */
@@ -25,8 +26,8 @@
 
 <nav>
     <ul>
-        <li><a href="index.html">Головна</a></li>
-        <li><a href="video_max.html">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
+        <li><a href="#index">Головна</a></li>
+        <li><a href="#index_max">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
         <li><a href="#">Другі відео</a></li>
     </ul>
 </nav>
