--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 <nav>
     <ul>
-        <li><a href="#index">Головна</a></li>
-        <li><a href="#index_max">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
+        <li><a href="index.html">Головна</a></li>
+        <li><a href="video_max.html">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
         <li><a href="#">Другі відео</a></li>
     </ul>
 </nav>
