--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Playlist</title>
-    <link rel="icon" href="logo2.jpg">
+    <title>Список видео с YouTube</title>
+    <link rel="icon" href="logo.jpg">
     <style>
+
+        body {
+            font-family: Arial, sans-serif;
+            padding: 10px;
+            background-color: #f7f7f7;
+        }
+
         .player {
             width: 560px; /* Ширина плеера для режима ПК */
             height: 315px; /* Высота плеера для режима ПК */
@@ -31,6 +38,8 @@
         <li><a href="#">Другі відео</a></li>
     </ul>
 </nav>
+
+
 
 <div id="playlistInfo"></div>
 <div id="players"></div>
