--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Список видео с YouTube</title>
     <link rel="icon" href="logo.jpg">
     <style>
-
         body {
             font-family: Arial, sans-serif;
             padding: 10px;
             background-color: #f7f7f7;
+            font-size: 16px; /* Увеличение размера шрифта */
         }
 
         .player {
@@ -28,75 +28,69 @@
     </style>
 </head>
 <body>
+    <p>Церква "Дім Євангелія" м Суми.</p>
+    <nav>
+        <ul>
+            <li><a href="index.html">Головна</a></li>
+            <li><a href="video_max.html">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
+            <li><a href="#">Другі відео</a></li>
+        </ul>
+    </nav>
+    <div id="playlistInfo"></div>
+    <div id="players"></div>
 
-        <p>Церква "Дім Євангелія" м Суми.</p>
-
-<nav>
-    <ul>
-        <li><a href="index.html">Головна</a></li>
-        <li><a href="video_max.html">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
-        <li><a href="#">Другі відео</a></li>
-    </ul>
-</nav>
-
-
-
-<div id="playlistInfo"></div>
-<div id="players"></div>
-
-<script>
-    // Функция для загрузки содержимого плейлиста
-    async function loadPlaylist(url) {
-        const response = await fetch(url);
-        const playlistContent = await response.text();
-        return playlistContent.split('\n');
-    }
-
-    // Функция для создания YouTube плеера
-    function createYouTubePlayer(videoId) {
-        const playerDiv = document.createElement('div');
-        playerDiv.classList.add('player');
-        playerDiv.innerHTML = `<iframe width="100%" height="100%" src="https://www.youtube.com/embed/${videoId}" frameborder="0" allowfullscreen></iframe>`;
-        return playerDiv;
-    }
-
-    // Создаем плееры для четырех последних видео
-    async function createPlayers() {
-        const playlistUrl = 'https://raw.githubusercontent.com/ruyriy/VideoYouTube/main/videos.txt';
-        const playlistLines = await loadPlaylist(playlistUrl);
-        const videos = [];
-
-        // Разбираем плейлист и находим видео с датами
-        playlistLines.forEach(line => {
-            const parts = line.split(':');
-            if (parts.length >= 5) {
-                const videoId = parts[2];
-                const dateString = parts[4];
-                const dateParts = dateString.split('.');
-                // Интерпретируем дату из строки в формате "день.месяц.год"
-                const date = new Date(dateParts[2], dateParts[1] - 1, dateParts[0]);
-                videos.push({ videoId, date });
-            }
-        });
-
-        // Сортируем видео по дате (от новых к старым)
-        videos.sort((a, b) => b.date - a.date);
-
-        // Выводим информацию о количестве видео в плейлисте
-        const videoCountSpan = document.getElementById('videoCount');
-        videoCountSpan.textContent = videos.length;
-
-        // Создаем четыре плеера и загружаем в них последние видео
-        const playersContainer = document.getElementById('players');
-        for (let i = 0; i < 4 && i < videos.length; i++) {
-            const player = createYouTubePlayer(videos[i].videoId);
-            playersContainer.appendChild(player);
+    <script>
+        // Функция для загрузки содержимого плейлиста
+        async function loadPlaylist(url) {
+            const response = await fetch(url);
+            const playlistContent = await response.text();
+            return playlistContent.split('\n');
         }
-    }
 
-    // Создаем плееры при загрузке страницы
-    window.onload = createPlayers;
-</script>
+        // Функция для создания YouTube плеера
+        function createYouTubePlayer(videoId) {
+            const playerDiv = document.createElement('div');
+            playerDiv.classList.add('player');
+            playerDiv.innerHTML = `<iframe width="100%" height="100%" src="https://www.youtube.com/embed/${videoId}" frameborder="0" allowfullscreen></iframe>`;
+            return playerDiv;
+        }
 
+        // Создаем плееры для четырех последних видео
+        async function createPlayers() {
+            const playlistUrl = 'https://raw.githubusercontent.com/ruyriy/VideoYouTube/main/videos.txt';
+            const playlistLines = await loadPlaylist(playlistUrl);
+            const videos = [];
+
+            // Разбираем плейлист и находим видео с датами
+            playlistLines.forEach(line => {
+                const parts = line.split(':');
+                if (parts.length >= 5) {
+                    const videoId = parts[2];
+                    const dateString = parts[4];
+                    const dateParts = dateString.split('.');
+                    // Интерпретируем дату из строки в формате "день.месяц.год"
+                    const date = new Date(dateParts[2], dateParts[1] - 1, dateParts[0]);
+                    videos.push({ videoId, date });
+                }
+            });
+
+            // Сортируем видео по дате (от новых к старым)
+            videos.sort((a, b) => b.date - a.date);
+
+            // Выводим информацию о количестве видео в плейлисте
+            const videoCountSpan = document.getElementById('videoCount');
+            videoCountSpan.textContent = videos.length;
+
+            // Создаем четыре плеера и загружаем в них последние видео
+            const playersContainer = document.getElementById('players');
+            for (let i = 0; i < 4 && i < videos.length; i++) {
+                const player = createYouTubePlayer(videos[i].videoId);
+                playersContainer.appendChild(player);
+            }
+        }
+
+        // Создаем плееры при загрузке страницы
+        window.onload = createPlayers;
+    </script>
 </body>
 </html>
