--- a/video_max.html
+++ b/video_max.html
@@ -124,7 +124,13 @@
 <nav>
     <ul>
         <li><a href="index.html">Головна</a></li>
-        <li><a href="video_max.html">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
+        <li><a href="video_max.html">Всі записи служінь<nav>
+    <ul>
+        <li><a href="index.html">Головна</a></li>
+        <li><a href="video_max.html">Всі записи служінь</a></li>
+        <li><a href="#">Другі відео</a></li>
+    </ul>
+</nav>
         <li><a href="#">Другі відео</a></li>
     </ul>
 </nav>
