--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ul>
             <li><a href="index.html">Головна</a></li>
             <li><a href="video_max.html">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
-            <li><a href="#">Другі відео</a></li>
+            <li><a href="video_other.html">Другі відео</a></li>
         </ul>
     </nav>
     <div id="playlistInfo"></div>
