--- a/video_max.html
+++ b/video_max.html
@@ -125,7 +125,7 @@
     <ul>
         <li><a href="index.html">Головна</a></li>
         <li><a href="video_max.html">Всі записи служінь</a></li>
-        <li><a href="#">Другі відео</a></li>
+        <li><a href="video_other.html">Другі відео</a></li>
     </ul>
 </nav>
    <!-- Индикатор загрузки -->
