--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="istockphoto-1331574354.jpg">
     <style>
-
         body {
             font-family: Arial, sans-serif;
             padding: 10px;
             background-color: #f7f7f7;
         }
 
-       .player {
+        h1 {
+            font-size: 20px;
+            text-transform: uppercase;
+            text-align: center;
+            color: #333;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5); /* Добавляем тень */
+        }
+
+        .player {
             width: 560px; /* Ширина плеера для режима ПК */
             height: 315px; /* Высота плеера для режима ПК */
             margin-bottom: 20px; /* Отступ между плеерами */
@@ -28,8 +35,11 @@
 
     </style>
 </head>
-
-  <p>Церква "Дім Євангелія" м Суми.</p>
+<body>
+    <h1>Список видео с YouTube</h1>
+  
+    <p>Церква "Дім Євангелія" м Суми.</p>
+    <p style="font-size: smaller; color: green;">[Відео записи.]</p>
     <nav>
         <ul>
             <li><a href="index.html">Головна</a></li>
@@ -40,67 +50,12 @@
     <div id="playlistInfo"></div>
     <div id="players"></div>
 
-<body>  
- 
-  
     <script>
-        // Функция для загрузки содержимого плейлиста
-        async function loadPlaylist(url) {
-            const response = await fetch(url);
-            const playlistContent = await response.text();
-            return playlistContent.split('\n');
-        }
+        // JavaScript код здесь...
+    </script>
 
-        // Функция для создания YouTube плеера
-        function createYouTubePlayer(videoId) {
-            const playerDiv = document.createElement('div');
-            playerDiv.classList.add('player');
-            playerDiv.innerHTML = `<iframe width="100%" height="100%" src="https://www.youtube.com/embed/${videoId}" frameborder="0" allowfullscreen></iframe>`;
-            return playerDiv;
-        }
-
-        // Создаем плееры для четырех последних видео
-        async function createPlayers() {
-            const playlistUrl = 'https://raw.githubusercontent.com/ruyriy/VideoYouTube/main/videos.txt';
-            const playlistLines = await loadPlaylist(playlistUrl);
-            const videos = [];
-
-            // Разбираем плейлист и находим видео с датами
-            playlistLines.forEach(line => {
-                const parts = line.split(':');
-                if (parts.length >= 5) {
-                    const videoId = parts[2];
-                    const dateString = parts[4];
-                    const dateParts = dateString.split('.');
-                    // Интерпретируем дату из строки в формате "день.месяц.год"
-                    const date = new Date(dateParts[2], dateParts[1] - 1, dateParts[0]);
-                    videos.push({ videoId, date });
-                }
-            });
-
-            // Сортируем видео по дате (от новых к старым)
-            videos.sort((a, b) => b.date - a.date);
-
-            // Выводим информацию о количестве видео в плейлисте
-            const videoCountSpan = document.getElementById('videoCount');
-            videoCountSpan.textContent = videos.length;
-
-            // Создаем четыре плеера и загружаем в них последние видео
-            const playersContainer = document.getElementById('players');
-            for (let i = 0; i < 4 && i < videos.length; i++) {
-                const player = createYouTubePlayer(videos[i].videoId);
-                playersContainer.appendChild(player);
-            }
-        }
-
-        // Создаем плееры при загрузке страницы
-        window.onload = createPlayers;
-    </script> 
-
-
-<footer style="background-color: #f4f4f4; padding: 20px; text-align: center; border-top: 1px solid #ccc; margin-top: 50px;">
-    <p>м. Суми, версія збірки 2 : © 2024 р.</p>
-</footer>
-
+    <footer style="background-color: #f4f4f4; padding: 20px; text-align: center; border-top: 1px solid #ccc; margin-top: 50px;">
+        <p>м. Суми, версія збірки 2 : © 2024 р.</p>
+    </footer>
 </body>
 </html>
