--- a/index.html
+++ b/index.html
@@ -51,7 +51,57 @@
     <div id="players"></div>
 
     <script>
-        // JavaScript код здесь...
+              // Функция для загрузки содержимого плейлиста
+        async function loadPlaylist(url) {
+            const response = await fetch(url);
+            const playlistContent = await response.text();
+            return playlistContent.split('\n');
+        }
+
+        // Функция для создания YouTube плеера
+        function createYouTubePlayer(videoId) {
+            const playerDiv = document.createElement('div');
+            playerDiv.classList.add('player');
+            playerDiv.innerHTML = `<iframe width="100%" height="100%" src="https://www.youtube.com/embed/${videoId}" frameborder="0" allowfullscreen></iframe>`;
+            return playerDiv;
+        }
+
+        // Создаем плееры для четырех последних видео
+        async function createPlayers() {
+            const playlistUrl = 'https://raw.githubusercontent.com/ruyriy/VideoYouTube/main/videos.txt';
+            const playlistLines = await loadPlaylist(playlistUrl);
+            const videos = [];
+
+            // Разбираем плейлист и находим видео с датами
+            playlistLines.forEach(line => {
+                const parts = line.split(':');
+                if (parts.length >= 5) {
+                    const videoId = parts[2];
+                    const dateString = parts[4];
+                    const dateParts = dateString.split('.');
+                    // Интерпретируем дату из строки в формате "день.месяц.год"
+                    const date = new Date(dateParts[2], dateParts[1] - 1, dateParts[0]);
+                    videos.push({ videoId, date });
+                }
+            });
+
+            // Сортируем видео по дате (от новых к старым)
+            videos.sort((a, b) => b.date - a.date);
+
+            // Выводим информацию о количестве видео в плейлисте
+            const videoCountSpan = document.getElementById('videoCount');
+            videoCountSpan.textContent = videos.length;
+
+            // Создаем четыре плеера и загружаем в них последние видео
+            const playersContainer = document.getElementById('players');
+            for (let i = 0; i < 4 && i < videos.length; i++) {
+                const player = createYouTubePlayer(videos[i].videoId);
+                playersContainer.appendChild(player);
+            }
+        }
+
+        // Создаем плееры при загрузке страницы
+        window.onload = createPlayers;
     </script>
 
     <footer style="background-color: #f4f4f4; padding: 20px; text-align: center; border-top: 1px solid #ccc; margin-top: 50px;">
