--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <li><a href="index.html">Головна</a></li>
             <li><a href="video_max.html">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
             <li><a href="video_other.html">Другі відео</a></li>
+            <li><a href="radio.html">Онлайн радыо</a></li>
         </ul>
     </nav>
     <div id="playlistInfo"></div>
