--- a/video_max.html
+++ b/video_max.html
@@ -126,6 +126,7 @@
         <li><a href="index.html">Головна</a></li>
         <li><a href="video_max.html">Всі записи служінь</a></li>
         <li><a href="video_other.html">Другі відео</a></li>
+        <li><a href="radio.html">Онлайн радіо</a></li>
     </ul>
 </nav>
    <!-- Индикатор загрузки -->
