--- a/video_other.html
+++ b/video_other.html
@@ -127,6 +127,7 @@
         <li><a href="index.html">Головна</a></li>
         <li><a href="video_max.html">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
         <li><a href="video_other.html">Другі відео</a></li>
+        <li><a href="radio.html">Онлайн радіо</a></li>
     </ul>
 </nav>
 
