--- a/video_max.html
+++ b/video_max.html
@@ -120,15 +120,20 @@
     </style>
 </head>
 <body>    
-        <p>Церква "Дім Євангелія" м Суми.</p>
+     <h2>Церква "Дім Євангелія</h2>
+  
+    <p>Збірник відео записів .</p>
+    <p style="font-size: smaller; color: green;">[Cторінка : Записи служінь]</p>
 <nav>
     <ul>
         <li><a href="index.html">Головна</a></li>
-        <li><a href="video_max.html">Всі записи служінь</a></li>
+        <li><a href="video_max.html">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
         <li><a href="video_other.html">Другі відео</a></li>
         <li><a href="radio.html">Онлайн радіо</a></li>
     </ul>
 </nav>
+
+
    <!-- Индикатор загрузки -->
     <div id="loader" style="display: none; text-align: center; margin-top:20px;">
         <img src="Spinner-3.gif" alt="Loading..." width="50">
