--- a/video_other.html
+++ b/video_other.html
@@ -120,8 +120,10 @@
     </style>
 </head>
 <body>    
-        <p>Церква "Дім Євангелія" м Суми.</p>
-        <p style="font-size: smaller; color: green;">[Відео : Проповідь]</p>
+    <h2>Церква "Дім Євангелія</h2>
+  
+    <p>Збірник відео записів .</p>
+    <p style="font-size: smaller; color: green;">[Cторінка : Другі відео]</p>
 <nav>
     <ul>
         <li><a href="index.html">Головна</a></li>
