video_other.html

--- a/video_other.html
+++ b/video_other.html
@@ -157,7 +157,7 @@
 <div class="content-section">
     <h2>
         <img src="logo.jpg" alt="Аватар " class="video-avatar">
-        Відео збіркаі
+        Відео збірка
     </h2>
     <ul class="video-links" data-group="Інше"></ul>
 </div>
