--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
             <li><a href="index.html">Головна</a></li>
             <li><a href="video_max.html">Всі записи служінь (<span id="videoCount">0</span>)</a></li>
             <li><a href="video_other.html">Другі відео</a></li>
-	    <li><a href="radio.html">Онлайн радіо</a></li>
+
+            <ul>
+               <li><a href="video_other.html">Збірки проповідей</a></li>
+	       <li><a href="video_other.html">Музична християнська сбірка</a></li>
+            </ul>
+            <li><a href="radio.html">Онлайн християнське радіо</a></li>
         </ul>
     </nav>
     <div id="playlistInfo"></div>
