--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <ul>
                <li><a href="video_other.html">Збірки проповідей</a></li>
-	       <li><a href="video_other.html">Музична християнська сбірка</a></li>
+	       <li><a href="video_other.html">Музична сбірка</a></li>
             </ul>
             <li><a href="radio.html">Онлайн християнське радіо</a></li>
         </ul>
