--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             height: 315px; /* Высота плеера для режима ПК */
             margin-bottom: 20px; /* Отступ между плеерами */
         }
-
+nav ul li {
+    margin-bottom: 10px; /* Увеличиваем расстояние между элементами меню по вертикали на 10 пикселей */
+}
         @media (max-width: 768px) {
             .player {
                 width: 80%; /* Полная ширина плеера для мобильных устройств */
