--- a/video_max.html
+++ b/video_max.html
@@ -21,7 +21,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 30px;
     padding: 20px;
-    background-image: url('icon15.jpg'); /* Путь к вашему фоновому изображению */
+    background-image: url('images/icon15.jpg'); /* Путь к вашему фоновому изображению */
     background-size: cover; /* Масштабирование изображения */
     background-repeat: no-repeat; /* Запрет повторения фонового изображения */
     background-position: center; /* Центрирование фонового изображения */
@@ -77,7 +77,9 @@
             overflow: hidden;
          }
 
-       
+nav ul li {
+    margin-bottom: 8px; /* Увеличиваем расстояние между элементами меню по вертикали на 10 пикселей */
+}      
         @media (max-width: 768px) {
             .video-player {
                 position: relative;
@@ -136,7 +138,7 @@
 
    <!-- Индикатор загрузки -->
     <div id="loader" style="display: none; text-align: center; margin-top:20px;">
-        <img src="Spinner-3.gif" alt="Loading..." width="50">
+        <img src="images/Spinner-3.gif" alt="Loading..." width="50">
         <p>Завантаження відео...</p>
     </div>
 
@@ -146,7 +148,7 @@
 
 <div class="content-section">
     <h2>
-        <img src="logo.jpg" alt="Аватар " class="video-avatar">
+        <img src="images/sq-5.jpg" alt="Аватар " class="video-avatar">
         Служіння
     </h2>
     <ul class="video-links" data-group="Служіння"></ul>
@@ -155,7 +157,7 @@
 
 <div class="content-section">
     <h2>
-        <img src="logo.jpg" alt="Аватар " class="video-avatar">
+        <img src="images/logo.jpg" alt="Аватар " class="video-avatar">
         Прославлення Господа
     </h2>
     <ul class="video-links" data-group="Прославлення"></ul>
@@ -163,7 +165,7 @@
 
 <div class="content-section">
     <h2>
-        <img src="logo.jpg" alt="Аватар " class="video-avatar">
+        <img src="images/video1-icon.jpg" alt="Аватар " class="video-avatar">
         Марйоха Микола Павлович
 
     </h2>
@@ -172,7 +174,7 @@
 
 <div class="content-section">
     <h2>
-        <img src="logo.jpg" alt="Аватар " class="video-avatar">
+        <img src="images/video2-icon.jpg" alt="Аватар " class="video-avatar">
         Міщенко Андрій
 
     </h2>
@@ -182,7 +184,7 @@
 
 <div class="content-section">
     <h2>
-        <img src="logo.jpg" alt="Аватар " class="video-avatar">
+        <img src="images/video3-icon.jpg" alt="Аватар " class="video-avatar">
         Булигін Андрій Петрович
 
     </h2>
@@ -191,7 +193,7 @@
 
 <div class="content-section">
     <h2>
-        <img src="logo.jpg" alt="Аватар " class="video-avatar">
+        <img src="images/video7-icon.jpg" alt="Аватар " class="video-avatar">
         Зінченко
 
     </h2>
@@ -200,7 +202,7 @@
 
 <div class="content-section">
     <h2>
-        <img src="logo.jpg" alt="Аватар " class="video-avatar">
+        <img src="images/video6-icon.jpg" alt="Аватар " class="video-avatar">
         Лаба
 
     </h2>
@@ -209,7 +211,7 @@
 
 <div class="content-section">
     <h2>
-        <img src="logo.jpg" alt="Аватар " class="video-avatar">
+        <img src="images/video4-icon.jpg" alt="Аватар " class="video-avatar">
        Парфіло 
 
     </h2>
@@ -218,7 +220,7 @@
 
 <div class="content-section">
     <h2>
-        <img src="logo.jpg" alt="Аватар " class="video-avatar">
+        <img src="images/video8-icon.jpg" alt="Аватар " class="video-avatar">
        Комісар
 
     </h2>
@@ -227,7 +229,7 @@
 
 <div class="content-section">
     <h2>
-        <img src="logo.jpg" alt="Аватар " class="video-avatar">
+        <img src="images/video5-icon.jpg" alt="Аватар " class="video-avatar">
        Иванченко
 
     </h2>
@@ -240,7 +242,7 @@
 
 <div class="content-section">
     <h2>
-        <img src="logo.jpg" alt="Аватар " class="video-avatar">
+        <img src="images/team-image4.jpg" alt="Аватар " class="video-avatar">
         Прославлення, Молодіжна
     </h2>
     <ul class="video-links" data-group="Молодіжне служіння|Дитяче служіння|Охріменко|Олена Приходько"></ul>
@@ -248,7 +250,7 @@
 
 <div class="content-section">
     <h2>
-        <img src="logo.jpg" alt="Аватар " class="video-avatar">
+        <img src="images/project-image4.jpg" alt="Аватар " class="video-avatar">
         Хоровий спів
     </h2>
     <ul class="video-links" data-group="Хоровий спів"></ul>
@@ -256,7 +258,7 @@
 
 <div class="content-section">
     <h2>
-        <img src="logo.jpg" alt="Аватар " class="video-avatar">
+        <img src="images/project-image5.jpg" alt="Аватар " class="video-avatar">
         Водне хрещення
     </h2>
     <ul class="video-links" data-group="Водне хрещення"></ul>
@@ -264,7 +266,7 @@
 
 <div class="content-section">
     <h2>
-        <img src="logo.jpg" alt="Аватар " class="video-avatar">
+        <img src="images/logo.jpg" alt="Аватар " class="video-avatar">
         Інші відео
     </h2>
     <ul class="video-links" data-group="остальное|Unknown"></ul>
@@ -355,7 +357,7 @@ function renderVideoLists(videos) {
         videoLink.href = '#';
 
         const videoImage = document.createElement('img');
-        videoImage.src = 'youtube_icon.png';
+        videoImage.src = 'images/youtube_icon.png';
         videoImage.alt = 'YouTube Icon';
 
         const videoIndexSpan = document.createElement('span');
