--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
             height: 315px; /* Высота плеера для режима ПК */
             margin-bottom: 20px; /* Отступ между плеерами */
         }
+
 nav ul li {
-    margin-bottom: 10px; /* Увеличиваем расстояние между элементами меню по вертикали на 10 пикселей */
+    margin-bottom: 8px; /* Увеличиваем расстояние между элементами меню по вертикали на 10 пикселей */
 }
+
+
         @media (max-width: 768px) {
             .player {
                 width: 80%; /* Полная ширина плеера для мобильных устройств */
@@ -49,8 +52,9 @@ nav ul li {
             <li><a href="video_other.html">Другі відео</a></li>
 
             <ul>
-               <li><a href="video_other.html">Збірки проповідей</a></li>
-	       <li><a href="video_other.html">Музична сбірка</a></li>
+               
+               <li><a href="video_other.html#sluzhinnya-anchor">Збірки проповідей</a></li>
+	       <li><a href="video_other.html#musical">Музична християнська сбірка</a></li>
             </ul>
             <li><a href="radio.html">Онлайн християнське радіо</a></li>
         </ul>
