--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5); /* Добавляем тень */
         }
 
+.title-text {
+    font-size: 18px; /* Размер шрифта */
+    font-weight: normal; /*  шрифт */
+    color: #1565c0; /* Цвет текста */
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.5); /* Тень текста */
+}
+
+.link-text {
+    font-size: smaller; /* Уменьшенный размер шрифта */
+    color: green; /* Цвет текста */
+}
+
         .player {
             width: 560px; /* Ширина плеера для режима ПК */
             height: 315px; /* Высота плеера для режима ПК */
@@ -34,11 +46,11 @@ nav ul li {
 nav ul li a {
     text-decoration: none; /* Убираем подчеркивание у ссылок */
     color: #333; /* Цвет текста ссылок */
-    width: 260px; /* Фиксированная ширина элементов меню */
+    width: 240px; /* Фиксированная ширина элементов меню */
     display: block; /* Делаем элементы меню блочными, чтобы задать ширину */
     padding: 4px 10px; /* Внутренний отступ у ссылок */
     background-color: #fff; /* Цвет фона ссылок */
-    border-radius: 4px; /* Закругляем углы ссылок */
+    border-radius: 8px; /* Закругляем углы ссылок */
     transition: background-color 0.3s ease; /* Плавное изменение цвета фона при наведении */
 }
 
@@ -54,10 +66,11 @@ nav ul li a {
     </style>
 </head>
 <body>
+
     <h1>Церква "Дім Євангелія"</h1>
-  
-    <p>Збірник відео записів .</p>
-    <p style="font-size: smaller; color: green;">[Головна сторінка]</p>
+    <p class="title-text">Збірник відео записів</p>
+    <p class="link-text">[Головна сторінка]</p>
+
     <nav>
         <ul>
             <li><a href="index.html">Головна</a></li>
