--- a/radio.html
+++ b/radio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Онлайн радио</title>
-    <meta property="og:image" content="https://example.com/path/to/your/image.jpg"> <!-- Замените на ссылку на ваше изображение -->
+    <meta property="og:image" content="images/ic_radio.jpg"> <!-- Замените на ссылку на ваше изображение -->
 
     <style>
         /* Общие стили */
