--- a/radio.html
+++ b/radio.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="icon" href="images/radio1.jpg">
     <title>Онлайн радио</title>
-    <meta property="og:image" content="images/radio1.jpg"> <!-- Замените на ссылку на ваше изображение -->
-
     <style>
         /* Общие стили */
         body {
