--- a/radio.html
+++ b/radio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="icon" href="images/radio1.jpg">
+    <link rel="icon" href="istockphoto-1331574354.jpg">
     <title>Онлайн радио</title>
     <style>
         /* Общие стили */
