--- a/radio.html
+++ b/radio.html
@@ -117,7 +117,7 @@
         player.src = radioURL;
         player.play();
         // Устанавливаем название радиостанции
-        document.getElementById('currentRadio').textContent = "Ефір: " + radioName;
+        document.getElementById('currentRadio').textContent = "Станція: " + radioName;
     }
 </script>
 <script src="audioServiceWorker.js"></script> <!-- Добавляем эту строку -->
