--- a/radio.html
+++ b/radio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="radio1.jpg">
-    <title>Онлайн радио</title>
+    <title>Християнське радіо онлайн</title>
     
 
     <style>
@@ -81,7 +81,7 @@
 <body>
 
 <header>
-    <h1>Христианское радио онлайн</h1>
+    <h1>Християнське радіо онлайн</h1>
     <h3>Сбірка : (Дім Євангелія" м Суми., Украина)</h3>
 </header>
 
